added animations and readme

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         
       <div class='container'>
-        <div id='row'>
+        <div id='row' class='searchbar' >
     ​     <input type="search" id="address" class="form-control" placeholder="City or Address" />
           <p class="underbar">Selected: <strong id="address-value">none</strong></p>
         </div>
